# fun_run

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: command.rs  lib.rs
