[package]
name = "fun_run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
which_problem = { version = "0.1", optional = true }
regex = "1"

[features]
which_problem = ["dep:which_problem"]
