[package]
name = "fun_run"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "The fun way to run your Rust Comand"
keywords = ["command", "execute", "run", "stream", "CLI"]
repository = "https://github.com/schneems/fun_run"
documentation = "https://docs.rs/fun_run"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
which_problem = { version = "0.1", optional = true }
regex = "1"

[features]
which_problem = ["dep:which_problem"]

[dev-dependencies]
pretty_assertions = "1"
